@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- Made libjpeg dependency optional at compile time and added mapnik2.has_jpeg() method to check for support in python (#545).
+
 - Fixed reading of PostGIS data on Big Endian systems (#515)
 
 - PostGIS: Added better support for alterative schemas (#500)
